# icon-grid-generator

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: dco.yml  docs.yml  release.yml  test.yml
docs/: api.md  design.md  examples.md  index.md  repository-metadata.md
examples/: planar_torus.py  write_global_grid.py  write_limited_area.py
scripts/: generate_docs_figures.py
src/grid_generator/: __init__.py  _accelerated.py  _diagnostics.py  _geometry.py  _global.py  _io.py  _limited_area.py  _netcdf.py  _optimization.py  _ordering.py  _planar.py  _refinement.py  _topology.py  _torus.py  _types.py  _validation.py  cutting.py  diagnostics.py  grid_generator.py  planar.py  transforms.py  visualization.py
tests/: grid_assertions.py  test_agent_drift.py  test_api.py  test_diagnostics_transforms.py  test_grid_correctness_matrix.py  test_grid_generator.py  test_netcdf.py  test_performance.py  test_planar_limited_area.py  test_visualization.py
