[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "icon-grid-generator"
version = "0.3.2"
description = "Pure Python generation of ICON-style triangular grids"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [
    { name = "Oliver Fuhrer, MeteoSwiss" },
]
keywords = ["ICON", "grid", "geodesic", "torus", "netcdf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy",
]

[project.urls]
Changelog = "https://github.com/ofuhrer/icon-grid-generator/blob/main/CHANGELOG.md"
Documentation = "https://ofuhrer.github.io/icon-grid-generator/"
Homepage = "https://github.com/ofuhrer/icon-grid-generator"
Issues = "https://github.com/ofuhrer/icon-grid-generator/issues"
Repository = "https://github.com/ofuhrer/icon-grid-generator"
Source = "https://github.com/ofuhrer/icon-grid-generator"

[project.optional-dependencies]
accelerate = ["numba>=0.63"]
docs = ["mkdocs", "mkdocs-material"]
netcdf = ["netCDF4"]
xarray = ["xarray"]
test = ["pytest", "ruff", "netCDF4", "xarray"]

[tool.hatch.build.targets.wheel]
packages = ["src/grid_generator"]

[tool.hatch.build.targets.wheel.force-include]
"src/grid_generator/py.typed" = "grid_generator/py.typed"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "performance: optional local performance regression checks",
]
